syntax = "proto2";

// NB: snake_case is mapped to camelCase in generated code
message OOBEConfig {
	required bool did_accept_license = 1;
	// Default to hostname
	required string pc_name = 2;

	/**enum ThemeOptions {
		LIGHT = 0;
		DARK = 1;
	}
	ThemeOptions theme = 3;*/ // GUI only
	required string registry_root = 3;
	required string network_adapter = 4;
	required string ipv4_address = 5;
	// repated = array of
	repeated string addon_install_list = 6;
	/** (CLI) options */
	message OOBEOptions {
		/** Proceed regarless of if oobe has already been done */
		// TODO:  Implement better
		required bool force = 1;
		/** When true, don't set a static IPv4 address */
		required bool no_IPv4_set = 2;
	}
	required OOBEOptions options = 7;
}